--- a/docs/main.css
+++ b/docs/main.css
@@ -1,14 +1,12 @@
-header {
-	
-  background-color:#3b5910;
-  height: 30px;
-  
-      }
+.navbar-default .navbar-nav>li>a {
+    color: white;
+}
  footer 
  {
  
   height:30px;
  }
+ 
 #wrapper {
   margin-top:30px;
          }
@@ -16,14 +14,9 @@ header {
 #main,
 #menu,
 #sidebar {
-  height: 800px;
+  height:900px;
 }
 
-#main { background-color: orange; }
-
-#menu { background-color: pink; }
-
-#sidebar { background-color: yellow; }
 #main,
 #menu,
 #sidebar {
@@ -32,13 +25,10 @@ header {
 
 #header {
     background-color: #4267b2;
-    color: white;
+    
 }
 
 
-.white-text {
-  color: rgb(12,18,30);
-}
 
 .pull-right {
     float: right!important;
@@ -46,21 +36,12 @@ header {
 #s{
 	margin:-8px;
 }
-#F{
-	color:white;
-}
-#I{
-	color:white;
-	padding-left:5px;
-}
-#A{
-	color:white;
-}
-#d{
-	color:rgb(12,18,30);
-}
+
+
+
 .list-heading {
     padding: 20px 15px 0 15px;
+	padding-top:-5px;
 }
 .panel-body .glyphicon {
     margin-left: 10px;
@@ -80,13 +61,12 @@ header {
 	color:#acb0b6;
 }
 
-	text-color:black;
-}
-
+	
+	
+	
 .panel-title{
-	font-family:Times New Roman
-Georgia;
-font-size:20px;
+font-family:Times New Roman;
+font-size:14px;
 
 }
 
@@ -108,6 +88,7 @@ font-size:20px;
 #main {
     overflow: auto;
 }
+
 #main::-webkit-scrollbar{
 	display:none;
 }
@@ -133,14 +114,41 @@ font-size:20px;
 .list-group-item.active 
 {
 	background-color:white;
-	color:black;
+	color:darkblue;
 	border-color:white;  
 }
+
 .list-group-item.active .list-group-item-text
 {
-	color:blue;
+	color:black;
 }
 	.tab-pane{
-		font-size:10px;
+		font-size:15px;
 		
 	}
+.container{
+	margin-bottom:-33px;
+}
+.notifi{
+	width:10px;
+}
+.navbar-nav>li>a{
+	padding-right:0px;
+}
+.nav-pills>li>a {
+    border-radius: 4px;
+    color: black;
+	
+}
+.font-size>li>a{
+	font-size:12px;
+	position: relative;
+    display: block;
+    padding: 10px 15px;
+    padding-right: 0px;
+    padding-left: 10px;
+	color: blue;
+}
+.list-group .list-group-item.active .footer{
+	color:grey;
+}
